/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package fruits;

import ingredients.Color;


/**
 *
 * @author عسثق
 */
public class Banana extends Fruits {

    public Banana(  int amount) {
        super(new Color(237, 213, 171), VOLUMES[amount-1], "Banana", amount*25, amount);
    }

   
    
    
   @Override
    public String getInfo()
    {
        return super.getInfo();
    }

    
        

    }

    

    

    
    
    

