/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package fruits;
import ingredients.Color;
import ingredients.ColoredIngredient;


/**
 *
 * @author عسثق
 */
public abstract class Fruits extends ColoredIngredient {
    protected static double [ ] VOLUMES={50,100,150};
    

    public Fruits( Color color, double volume, String name, double calories , int amount) {
        super(color, volume, name, calories);
       
//        Sizes=new double[3];
//        Sizes[0]=50;
//        Sizes[1]=100;
//        Sizes[2]=150;
        
    }
    

    
    
  
   

    
    }
    
    

