/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

/**
 *
 * @author عسثق
 */
public class AlmondMilk extends Milk{

    public AlmondMilk(String name, double calories) {
        super("Almond Milk", 30);
    }
    
}
