/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

import ingredients.Color;

/**
 *
 * @author عسثق
 */
public class DairyMilk extends Milk {

    public DairyMilk(String name, double calories) {
        super("Dairy Milk", 150);
    }

    
    
    
}
