/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

import ingredients.Color;

/**
 *
 * @author عسثق
 */
public abstract class Juice extends Liquid{

    public Juice(Color color, String name, double calories) {
        super(color, name, calories);
    }

   
}
