/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

import ingredients.Color;

/**
 *
 * @author عسثق
 */
public class LemonJuice extends Juice{

    public LemonJuice(Color color, String name, double calories) {
        super(new Color(255,255,204), "Lemon juice", 60);
    }
    
}
