/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

import ingredients.Color;

/**
 *
 * @author عسثق
 */
public abstract class Milk extends Liquid{

    public Milk( String name, double calories) {
        super(new Color(255,251,241), name, calories);
    }

   

    
    
}
