/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

import ingredients.Color;

/**
 *
 * @author عسثق
 */
public class OatMilk extends Milk{

    public OatMilk(String name, double calories) {
        super("Oat Milk", 120);
    }

    
    
}
