/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package liquids;

import ingredients.Color;

/**
 *
 * @author عسثق
 */
public class OrangeJuice extends Juice{

    public OrangeJuice(Color color, String name, double calories) {
        super(new Color(253,165,15), "Orange juice", 110);
    }

  
    
}
