/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package toppings;

/**
 *
 * @author عسثق
 */
public class Sprinkles extends Toppings{

    public Sprinkles(String name, double calories) {
        super("Sprinkles", 40);
    }
    
    
}
